fourth commit updating css and semantic html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
   background-color: #d9dcd6;
 }
 
+/*updated to header element*/
 header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -16,15 +17,18 @@ header {
   color: #ffffff;
 }
 
+/*updated to header element*/
 header h1 {
   display: inline-block;
   font-size: 48px;
 }
 
+/*updated to header element*/
 header h1 .seo {
   color: #d9dcd6;
 }
 
+/*updated to nav element*/
 nav {
   padding-top: 15px;
   margin-right: 20px;
@@ -33,10 +37,12 @@ nav {
   font-size: 20px;
 }
 
+/*updated to nav element*/
 nav ul {
   list-style-type: none;
 }
 
+/*updated to nav element*/
 nav ul li {
   display: inline-block;
   margin-left: 25px;
@@ -76,7 +82,8 @@ p {
   margin-left: 20px;
 }
 
-.benefits {
+/* renamed to element */
+aside {
   margin-right: 20px;
   padding: 20px;
   clear: both;
@@ -87,72 +94,32 @@ p {
   background-color: #2589bd;
 }
 
-.benefit-lead {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
+/*combined benefit classes to streamline css*/
+.benefit-lead,
+.benefit-brand,
 .benefit-cost {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit-lead h3 {
+/* took out classes for h3 to streamline css */
+h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-lead img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
+/* combined classes tags to streamline css */
+.benefit-lead img,
+.benefit-brand img,
 .benefit-cost img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
-.search-engine-optimization {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
+/* combined like classes to clean up css */
+.search-engine-optimization,
+.online-reputation-management,
 .social-media-marketing {
   margin-bottom: 20px;
   padding: 50px;
@@ -162,33 +129,20 @@ p {
   color: #ffffff;
 }
 
-.search-engine-optimization img {
-  max-height: 200px;
-}
-
-.online-reputation-management img {
-  max-height: 200px;
-}
-
+/* combined like classes to clean up css */
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
   max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+/* took classes off h2 to streamline css */
+h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
 
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.social-media-marketing h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
+/* changed to footer element */
 footer {
   padding: 30px;
   clear: both;
@@ -197,6 +151,7 @@ footer {
   text-align: center;
 }
 
+/* changed to footer element */
 footer h2 {
   font-size: 20px;
 }
